# UR5e_social_robotics

./: .gitignore  README.md
Documentation/: 1_Computer_Vision_YOLO.md  1_Social Robot Architecture Evolution.md  UR5e_social_robotics_architecture.md
Documentation/Files/Docker/: Dockerfile  Dockerfile1  UB_Custom_Docker_container_ur5e.md  docker-compose.yaml  entrypoint_pc.sh
Documentation/Files/YOLO_model_generation/: 1_capture_images.py  1_capture_images_from_topic.py  2_prepare_dataset.py  3_generate_model.py  4_classify_camera.py  4_classify_camera_from_topic.py  5_identify_camera.py  5_identify_camera_from_topic.py  6_pose_gesture_camera.py
Documentation/Files/YOLO_model_generation/Detection_programs/: 1_person_presence_camera.py  2_person_detection_camera.py  3_person_segmentation_camera.py  4_person_pose_camera.py  (+1 more)
Level1_monolithic/: README.md  social_robot.py
Level2_modular/: README.md  chatgpt_interpreter.py  config.py  main.py  social_robot_hri.py  social_robot_perception.py  ur5e_social_motion.py
Level3_professional/: README.md  requirements.txt  setup.py
Level3_professional/social_robot_app/: __init__.py  chatgpt_interpreter.py  config.py  main.py  social_robot_hri.py  social_robot_perception.py  ur5e_social_motion.py
resources/roboDK/: Pick&Place_UR5e.rdk
src/: level4_ROS2_social_robot_README.md
src/social_robot_behaviors/: package.xml  setup.cfg  setup.py
src/social_robot_behaviors/launch/: social_behavior.launch.py
src/social_robot_behaviors/social_robot_behaviors/: handshake_behavior.py  highfive_behavior.py  init_behavior.py  social_behavior_manager.py
src/social_robot_gesture/: README.md  package.xml  setup.cfg  setup.py
src/social_robot_gesture/config/: gesture_thresholds.yaml
src/social_robot_gesture/launch/: gesture_classifier.launch.py
src/social_robot_gesture/social_robot_gesture/: __init__.py  gesture_classifier_node.py  gesture_rules.py  gesture_types.py  temporal_filter.py
src/social_robot_hri/: package.xml  setup.cfg  setup.py
src/social_robot_hri/social_robot_hri/: gpt_interpreter.py
src/social_robot_lib/: README.md
src/social_robot_lib/config/: settings.py
src/social_robot_lib/hri/: speech_listener.py  tts_engine.py  wakeword.py
src/social_robot_lib/interaction/: command_router.py  conversation_manager.py
src/social_robot_lib/interpreter/: local_parser.py  openai_interpreter.py
src/social_robot_lib/models/: intent.py
src/social_robot_lib/perception/: face_identifier.py
src/social_robot_perception/: package.xml  setup.cfg  setup.py
src/ur5e_social_motion/: package.xml  setup.cfg  setup.py
src/ur5e_social_motion/config/: ur5e_social_handshake.yaml  ur5e_social_highfive.yaml  ur5e_social_init.yaml
src/ur5e_social_motion/launch/: ur5e_pose_sequence.launch.py  ur5e_social_handshake.launch.py  ur5e_social_highfive.launch.py  ur5e_social_init.launch.py
src/ur5e_social_motion/ur5e_social_motion/: sequence_runner.py  social_motions.py  ur5e_move_to_pose_exe.py
(+1 files in other folders)
