<?xml version="1.0"?>
<package format="3">
  <name>social_robot_behaviors</name>
  <version>0.0.0</version>
  <description>Social robot behavior manager</description>

  <maintainer email="manel@example.com">manel</maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>

  <exec_depend>python3</exec_depend>

</package>