<?xml version="1.0"?>
<package format="3">

  <name>social_robot_behaviors</name>
  <version>0.0.0</version>
  <description>Social robot behavior manager</description>

  <maintainer email="manel@example.com">manel</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Core ROS dependency -->
  <depend>rclpy</depend>

  <!-- Local workspace packages -->
  <exec_depend>ur5e_social_motion</exec_depend>
  <exec_depend>social_robot_lib</exec_depend>

  <!-- Python runtime -->
  <exec_depend>python3</exec_depend>

</package>