<?xml version="1.0"?>
<package format="3">

  <name>social_robot_behaviors</name>
  <version>0.0.0</version>
  <description>Social robot behavior manager</description>

  <maintainer email="manel@example.com">manel</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>

  <exec_depend>ur5e_social_motion</exec_depend>
  <exec_depend>social_robot_lib</exec_depend>
  <exec_depend>python3</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>